Update css (lots of little tweaks) - move bg image to separate div (to allow for opacity control) - bg image is now fixed (which looks cool during scroll) - search field is now dark theme - Tweak main title spacing - center wad bar navigation - add border radius to wad bar - add some colors for customisation - Fix theme dropdown to unfurl from bottom - make tables use global border radius - stylise debug dump - rework compet-n theme (with background image) - added "terminal" theme css for example of theme with custom font

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -41,7 +41,7 @@
 }
 
 .docs-intro {
-  color: #ccc;
+  color: $panel-title-color;
   background-color: $table-bg-accent;
   border: 1px solid $table-border-color;
   border-radius: 10px;
@@ -58,7 +58,7 @@
 }
 
 .docs-summary {
-  color: white;
+  color: $docs-title-color;
   font-size: 1.5em;
   cursor: pointer;
   font-weight: bold;
